--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "4.3.1",
     "@angular/router": "4.3.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
+    "firebase": "^4.9.1",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
     "ng2-nouislider": "1.6.1",
