--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@pages/*": ["app/page/*"],
       "@components/*": ["app/components/*"],
       "@services/*": ["app/services/*"],
-      "@pipes/*": ["app/pipes/*"]
+      "@pipes/*": ["app/pipes/*"],
+      "@effects/*": ["app/effects/*"]
     },
     "sourceMap": true,
     "declaration": false,
