add db service; watch list component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@components/*": ["app/components/*"],
       "@services/*": ["app/services/*"],
       "@pipes/*": ["app/pipes/*"],
-      "@effects/*": ["app/effects/*"]
+      "@effects/*": ["app/effects/*"],
+      "@db/*": ["app/db/*"]
     },
     "sourceMap": true,
     "declaration": false,
