--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
-    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet"
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "build:universal": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "serve:universal": "node dist/server.js",
+    "build:client-and-server-bundles": "npm run build --prod && npm run build --prod --app 1 --output-hashing=false",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "dependencies": {
     "@angular/animations": "4.3.1",
@@ -20,8 +24,11 @@
     "@angular/http": "4.3.1",
     "@angular/platform-browser": "4.3.1",
     "@angular/platform-browser-dynamic": "4.3.1",
+    "@angular/platform-server": "^5.2.5",
     "@angular/router": "4.3.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
+    "@nguniversal/express-engine": "^5.0.0-beta.5",
+    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "angularfire2": "5.0.0-rc.3",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
@@ -32,6 +39,7 @@
     "nouislider": "9.2.0",
     "popper.js": "^1.12.3",
     "rxjs": "^5.1.0",
+    "ts-loader": "^3.5.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
