-- working on angular universal

--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "dependencies": {
-    "@angular/animations": "4.3.1",
-    "@angular/common": "4.3.1",
-    "@angular/compiler": "4.3.1",
-    "@angular/core": "4.3.1",
-    "@angular/forms": "4.3.1",
-    "@angular/http": "4.3.1",
-    "@angular/platform-browser": "4.3.1",
-    "@angular/platform-browser-dynamic": "4.3.1",
+    "@angular/animations": "^5.2.5",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
     "@angular/platform-server": "^5.2.5",
-    "@angular/router": "4.3.1",
+    "@angular/router": "^5.2.5",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
@@ -38,20 +38,22 @@
     "ng2-nouislider": "1.6.1",
     "nouislider": "9.2.0",
     "popper.js": "^1.12.3",
+    "promise-polyfill": "7.1.0",
     "rxjs": "^5.1.0",
     "ts-loader": "^3.5.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "4.3.1",
+    "@angular/cli": "^1.6.8",
+    "@angular/compiler-cli": "^5.2.5",
     "@angular/language-service": "4.3.1",
+    "@ngtools/webpack": "^1.1.8",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.0.1",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.1",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
@@ -78,7 +80,7 @@
     "stylus-loader": "^3.0.1",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "2.3.3",
+    "typescript": "^2.7.1",
     "url-loader": "^0.5.7",
     "webpack": "~3.5.5",
     "webpack-concat-plugin": "1.4.0",
