-- added material module - angular ui components. working on using ui component by both of the modules: admin and common - the problem is that admin is lazy loaded

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
       "@pipes/*": ["app/pipes/*"],
       "@effects/*": ["app/effects/*"],
       "@settings/*": ["app/settings/*"],
-      "@db/*": ["app/db/*"]
+      "@db/*": ["app/db/*"],
+      "@ui/*": ["app/ui/*"]
     },
     "sourceMap": true,
     "declaration": false,
