--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@angular/animations": "4.3.1",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "4.3.1",
     "@angular/compiler": "4.3.1",
     "@angular/core": "4.3.1",
     "@angular/forms": "4.3.1",
     "@angular/http": "4.3.1",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "4.3.1",
     "@angular/platform-browser-dynamic": "4.3.1",
     "@angular/router": "4.3.1",
@@ -26,6 +28,7 @@
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
     "firebase": "4.8.0",
+    "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
     "ng2-nouislider": "1.6.1",
