--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
+    "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.6.1",
+    "ngx-uploader": "^4.2.2",
     "nouislider": "9.2.0",
     "popper.js": "^1.12.3",
     "rxjs": "^5.1.0",
@@ -41,6 +43,7 @@
     "@angular/cli": "1.4.2",
     "@angular/compiler-cli": "4.3.1",
     "@angular/language-service": "4.3.1",
+    "@ngtools/webpack": "^1.10.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "autoprefixer": "^6.5.3",
@@ -77,7 +80,6 @@
     "url-loader": "^0.5.7",
     "webpack": "~3.5.5",
     "webpack-concat-plugin": "1.4.0",
-    "webpack-dev-server": "~2.7.1",
-    "@ngtools/webpack": "^1.1.8"
+    "webpack-dev-server": "~2.7.1"
   }
 }
