-- worked on upload image component; changed tslint; refactor app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@pipes/*": ["app/pipes/*"],
       "@effects/*": ["app/effects/*"],
       "@settings/*": ["app/settings/*"],
+      "@common/*": ["app/common/*"],
       "@db/*": ["app/db/*"],
       "@ui/*": ["app/ui/*"]
     },
