--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
+    "lodash": "^4.17.5",
     "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.6.1",
     "ngx-uploader": "^4.2.2",
