--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "4.3.1",
     "@angular/router": "4.3.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
+    "@types/lodash": "^4.14.104",
     "angularfire2": "5.0.0-rc.3",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
