--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "@angular/router": "4.3.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
     "@types/lodash": "^4.14.104",
+    "angular-modal-gallery": "^4.0.1",
     "angularfire2": "5.0.0-rc.3",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
     "firebase": "4.8.0",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
     "lodash": "^4.17.5",
+    "mousetrap": "^1.6.1",
     "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.6.1",
     "ngx-uploader": "^4.2.2",
@@ -46,7 +49,9 @@
     "@angular/compiler-cli": "4.3.1",
     "@angular/language-service": "4.3.1",
     "@ngtools/webpack": "^1.10.0",
+    "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "2.5.45",
+    "@types/mousetrap": "^1.6.0",
     "@types/node": "~6.0.60",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
