--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "4.3.1",
     "@angular/router": "4.3.1",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
+    "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
     "@types/lodash": "^4.14.104",
     "angular-modal-gallery": "^4.0.1",
