--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
-    "@types/lodash": "^4.14.104",
+    "@types/lodash": "^4.14.106",
     "angular-modal-gallery": "^4.0.1",
     "angularfire2": "5.0.0-rc.3",
     "bootstrap": "4.0.0-beta",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.4",
     "firebase": "4.8.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -40,26 +40,26 @@
     "mousetrap": "^1.6.1",
     "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.6.1",
-    "ngx-uploader": "^4.2.2",
+    "ngx-uploader": "^4.2.4",
     "nouislider": "9.2.0",
-    "popper.js": "^1.12.3",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "popper.js": "^1.14.3",
+    "rxjs": "^5.5.8",
+    "zone.js": "^0.8.25"
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
     "@angular/compiler-cli": "4.3.1",
     "@angular/language-service": "4.3.1",
-    "@ngtools/webpack": "^1.10.0",
+    "@ngtools/webpack": "^1.10.2",
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "2.5.45",
     "@types/mousetrap": "^1.6.0",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.104",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.10.0",
@@ -71,18 +71,18 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "less-loader": "^4.0.5",
+    "less-loader": "^4.1.0",
     "postcss-loader": "^1.3.3",
     "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.3",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.13.1",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "2.3.3",
