--work on pricePipe

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       "@interfaces/*": ["app/interfaces/*"],
       "@store/*": ["app/store/*"],
       "@ui/*": ["app/ui/*"],
+      "@directives/*": ["app/directives/*"],
       "@api/*": ["app/api/*"]
     },
     "sourceMap": true,
