--work on pricePipe --keep fixing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,15 +7,14 @@
       "@louis": ["app/*"],
       "@pages/*": ["app/pages/*"],
       "@components/*": ["app/components/*"],
-      "@services/*": ["app/services/*"],
-      "@pipes/*": ["app/pipes/*"],
-      "@effects/*": ["app/effects/*"],
+      "@services/*": ["app/shared/services/*"],
+      "@pipes/*": ["app/shared/pipes/*"],
       "@settings/*": ["app/settings/*"],
-      "@common/*": ["app/common/*"],
+      "@shared/*": ["app/shared/*"],
       "@interfaces/*": ["app/interfaces/*"],
       "@store/*": ["app/store/*"],
       "@ui/*": ["app/ui/*"],
-      "@directives/*": ["app/directives/*"],
+      "@directives/*": ["app/shared/directives/*"],
       "@api/*": ["app/api/*"]
     },
     "sourceMap": true,
