--update ts and other dependencies --UNWORKED

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,22 +2,22 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
-    "baseUrl": "./src",
+    "baseUrl": "./src/app",
     "paths": {
-      "@louis": ["app/*"],
-      "@pages/*": ["app/pages/*"],
-      "@components/*": ["app/components/*"],
-      "@services/*": ["app/shared/services/*"],
-      "@pipes/*": ["app/shared/pipes/*"],
-      "@settings/*": ["app/settings/*"],
-      "@shared/*": ["app/shared/*"],
-      "@interfaces/*": ["app/interfaces/*"],
-      "@store/*": ["app/store/*"],
-      "@ui/*": ["app/ui/*"],
-      "@directives/*": ["app/shared/directives/*"],
-      "@dictionaries/*": ["app/shared/dictionaries/*"],
-      "@helpers/*": ["app/shared/helpers/*"],
-      "@api/*": ["app/api/*"]
+      "@louis": ["./*"],
+      "@pages/*": ["./pages/*"],
+      "@components/*": ["./components/*"],
+      "@services/*": ["./shared/services/*"],
+      "@pipes/*": ["./shared/pipes/*"],
+      "@settings/*": ["./settings/*"],
+      "@shared/*": ["./shared/*"],
+      "@interfaces/*": ["./interfaces/*"],
+      "@store/*": ["./store/*"],
+      "@ui/*": ["./ui/*"],
+      "@directives/*": ["./shared/directives/*"],
+      "@dictionaries/*": ["./shared/dictionaries/*"],
+      "@helpers/*": ["./shared/helpers/*"],
+      "@api/*": ["./api/*"]
     },
     "sourceMap": true,
     "declaration": false,
