--- a/package.json
+++ b/package.json
@@ -26,27 +26,29 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
-    "@types/lodash": "^4.14.106",
+    "@types/lodash": "^4.14.108",
     "angular-modal-gallery": "^4.0.1",
     "angularfire2": "5.0.0-rc.3",
     "bootstrap": "4.0.0-beta",
-    "core-js": "^2.5.4",
+    "core-js": "^2.5.6",
     "firebase": "4.8.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "3.2.1",
     "jw-bootstrap-switch-ng2": "1.0.3",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "mousetrap": "^1.6.1",
     "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.6.1",
     "ngx-uploader": "^4.2.4",
     "nouislider": "9.2.0",
     "popper.js": "^1.14.3",
-    "rxjs": "^5.5.8",
-    "zone.js": "^0.8.25"
+    "rxjs": "^5.5.10",
+    "tsconfig-paths-webpack-plugin": "^3.0.4",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/core": "^0.6.0",
     "@angular/cli": "1.4.2",
     "@angular/compiler-cli": "4.3.1",
     "@angular/language-service": "4.3.1",
@@ -54,7 +56,7 @@
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "2.5.45",
     "@types/mousetrap": "^1.6.0",
-    "@types/node": "^6.0.104",
+    "@types/node": "^6.0.109",
     "autoprefixer": "^6.5.3",
     "circular-dependency-plugin": "^3.0.0",
     "codelyzer": "~3.0.1",
@@ -72,7 +74,7 @@
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.2",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "less-loader": "^4.1.0",
     "postcss-loader": "^1.3.3",
@@ -85,7 +87,7 @@
     "stylus-loader": "^3.0.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "2.3.3",
+    "typescript": "^2.8.3",
     "url-loader": "^0.5.7",
     "webpack": "~3.5.5",
     "webpack-concat-plugin": "1.4.0",
