--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.5",
-    "@angular/common": "^5.2.5",
-    "@angular/compiler": "^5.2.5",
-    "@angular/core": "^5.2.5",
-    "@angular/forms": "^5.2.5",
-    "@angular/http": "^5.2.5",
-    "@angular/platform-browser": "^5.2.5",
-    "@angular/platform-browser-dynamic": "^5.2.5",
-    "@angular/platform-server": "^5.2.5",
-    "@angular/router": "^5.2.5",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/material": "^2.0.0-beta.12",
+    "@angular/animations": "6.0.0",
+    "@angular/cdk": "6.0.1",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/forms": "6.0.0",
+    "@angular/http": "6.0.0",
+    "@angular/material": "6.0.1",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/platform-server": "6.0.0",
+    "@angular/router": "6.0.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.4",
     "@ngrx/effects": "^4.1.1",
     "@ngrx/store": "^4.1.1",
-    "@types/lodash": "^4.14.108",
-    "angular-modal-gallery": "^4.0.1",
     "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
+    "@types/lodash": "^4.14.108",
+    "angular-modal-gallery": "^4.0.1",
     "angularfire2": "5.0.0-rc.3",
     "bootstrap": "4.0.0-beta",
     "core-js": "^2.5.6",
@@ -48,19 +48,21 @@
     "ng2-file-upload": "^1.3.0",
     "ng2-nouislider": "1.6.1",
     "ngx-uploader": "^4.2.4",
+    "node-sass": "^4.9.0",
     "nouislider": "9.2.0",
     "popper.js": "^1.14.3",
-    "rxjs": "^5.5.10",
-    "tsconfig-paths-webpack-plugin": "^3.0.4",
     "promise-polyfill": "7.1.0",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "ts-loader": "^3.5.0",
-    "zone.js": "^0.8.4"
+    "tsconfig-paths-webpack-plugin": "^3.0.4",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.6.0",
-    "@angular/cli": "^1.6.8",
-    "@angular/compiler-cli": "^5.2.5",
-    "@angular/language-service": "4.3.1",
+    "@angular-devkit/core": "0.6.0",
+    "@angular/cli": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/language-service": "6.0.0",
     "@ngtools/webpack": "^1.10.2",
     "@types/hammerjs": "^2.0.35",
     "@types/jasmine": "2.5.45",
@@ -96,7 +98,7 @@
     "stylus-loader": "^3.0.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "^2.8.3",
+    "typescript": "2.7.2",
     "url-loader": "^0.5.7",
     "webpack": "~3.5.5",
     "webpack-concat-plugin": "1.4.0",
