--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "@api/*": ["./api/*"]
     },
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
