--update --WORKED --FROM Angular4 and round frameworks, RxJs5 --TO Angular 6, RxJs 6 --DELETED E2E tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist/out-tsc",
     "baseUrl": "./src/app",
     "paths": {
-      "@louis": ["./*"],
+      "@louis/*": ["./*"],
       "@pages/*": ["./pages/*"],
       "@components/*": ["./components/*"],
       "@services/*": ["./shared/services/*"],
